kleine mb-4 toegevoegd

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -27,11 +27,13 @@
 <div class="container-fluid"  style="width: 1700px">
 
     {# 1ste row met de header 12 -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- #}
+    <div class="mb-4">
     <div id="background-image"> 
         <a href="http://localhost/educom-verrukkulluk-1668679088/index.php"> <img src="assets/img/logo-v2.png"/> </a>         {# Dit gedeelte voegt het logo toe met eenlink naar de homepage#}
         {% block header %}
         {% endblock %}   
     </div> <!-- background-image -->
+    </div>
 
     {# 2de row met de agenda en login ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------- #}
     <div class="row">
