ietsje kleiner en werkt nu met m

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -40,9 +40,10 @@
     
         {# Linker helft ======================================================== #}
         <div class="col-md-4 " style="background-color: #FFF">
+        <div class="m-4-5">
 
             {# ///////////////// Agenda ///////////////// #}
-            <div class="p-5"> <!-- opent ruimte rondom agenda -->
+            <div class="mb-5"> <!-- opent ruimte rondom agenda -->
             <div class="col-md-12 p-4" style="background-color: #6e8722">                                                           {# Voegt groene achterkant toe en padding rond tekst#}
                 <center> <img src="assets/img/verrukkulluk-agenda.png" style="height: 80px; width: 187px"/> </center> <br>
                 {% for calendar in 0..5 %}
@@ -54,7 +55,7 @@
             </div>{# EIndigd de pt-5 #}
 
             {# ///////////////// Login ///////////////// #}
-            <div class="p-5">
+
             <div class="col-md-12 p-4 background-red">
                 <center class="pb-3"> <img src="assets/img/verrukkulluk-login.png" style="height: 80px; width: 187px"/> </center>
                 <form id="form">
@@ -66,7 +67,7 @@
                 </form>
                 <center> <div id="login" class="login_button"> Login </div> </center>                                               {# Login button#}
             </div> 
-            </div>
+
 
 
             <!-- Voorbeeld
@@ -75,6 +76,7 @@
             <i class="fa fa-file-pdf"></i><a href="https://www.layoutit.com/build">Layout-it</a>
             -->
         </div> {# Eindigd de col md-4 #}
+        </div>
         
 
         {# rechter helft ======================================================== #}
