margins en shadows toegevoegd

--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -21,7 +21,7 @@
 
 
 {% block content %}
-<div class="p-5">
+<div class="m-4-5">
 <div class="row shadow background-white"> {# Begin bevenste gedeelte. Hier kan je min-height achter zetten, maar de omschrijving hieronder doet dat ook al#}  
 
 
@@ -90,12 +90,12 @@
 </div> {# Einde rechter kant #}
 </div> {# Einde geheel bovenste gedeelte #}
 
-
+</div>  {# Sluit de m4-5 van hieroven voor de gerecht details#}
 <!-- tabladen: -->
 
-
+<div class="m-4-5">     {# opent een nieuwe m4-5 voor de tabs#}
 <!-- Tab buttons -->
-<div class="row">
+<div class="row shadow background-white">
 
     <div class="tab">
         <button class="tablinks" onclick="openTab(event, 'Ingredienten')"> <span class="tab-green"> Ingrediënten </span> </button>
