--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -33,13 +33,13 @@
     {# cijfers van personen, prijs en calorieen #}
     <div class="row">
         <div class="col-md-2"> 
-            <i class="fa fa-user" style="color:#F00"></i> 4
+            <i class="fa fa-user fa-lg" style="color:#F00"></i> 4
         </div>
         <div class="col-md-2"> 
-            <i class="fa fa-euro-sign" style="color:#F00"></i> {{ data.0.prijs |round(2)}}
+            <i class="fa fa-euro-sign fa-lg" style="color:#F00"></i> {{ data.0.prijs |round(2)}}
         </div>
         <div class="col-md-2"> 
-            <i class="fa fa-fire" style="color:#F00"></i> {{ data.0.calorieen |round(2)}}
+            <i class="fa fa-fire fa-lg" style="color:#F00"></i> {{ data.0.calorieen |round(2)}}
         </div>
     </div>
 
