--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -45,7 +45,7 @@
             {# ///////////////// Agenda ///////////////// #}
 
             <div class="mb-4-5-x2"> {# opent ruimte onder agenda #}
-                <div class="col-md-12 p-4 shadow" style="background-color: #6e8722">                                                    {# Voegt groene achterkant toe, padding rond tekst & een shadow#}
+                <div class="col-md-12 p-4 custom-shadow" style="background-color: #6e8722">                                                    {# Voegt groene achterkant toe, padding rond tekst & een shadow#}
 
                     <center> <img src="assets/img/verrukkulluk-agenda.png" style="height: 80px; width: 187px"/> </center> <br>
                     {% for calendar in 0..5 %}
@@ -59,7 +59,7 @@
 
             {# ///////////////// Login ///////////////// #}
 
-            <div class="col-md-12 p-4 shadow background-red">
+            <div class="col-md-12 p-4 custom-shadow background-red">
                 <center class="pb-3"> <img src="assets/img/verrukkulluk-login.png" style="height: 80px; width: 187px"/> </center>
                 <form id="form">
                     <div class="white"> Email: </div>
