Footer padding toegevoegd

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -95,14 +95,16 @@
 
 
     {# 3de en laatste row met de footer --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- #}
-    <div class="row">
-        <div class="col-md-12" style="background-color: #e85d04; color: #FFF">
-            <img src="assets/img/verrukkulluk-pay-off.png" style="height: 100px; width: 100px"/> <br>
-            <img src="assets/img/verrukkulluk-contact.png" style="height: 80px; width: 187px"/> <br>
-            verrukkulluk.nl <br>
-            Poststraat 2b <br>
-            Sittard <br>
-            info@verrukkulluk.nl
+    <div class="row" style="height: 400px">
+        <div class="col-md-2 pt-5 pl-5" style="background-color: #e85d04; color: #FFF">
+            <img src="assets/img/verrukkulluk-pay-off.png" style="height: 150px; width: 150px"/> <br>
+        </div>
+        <div class="col-md-10 pt-5" style="background-color: #e85d04; color: #FFF">
+            <img src="assets/img/verrukkulluk-contact.png" class="mb-5" style="height: 80px; width: 187px"/> 
+            <div> verrukkulluk.nl </div>
+            <div> Poststraat 2b </div>
+            <div> Sittard </div>
+            <div> info@verrukkulluk.nl <div>
         </div>
     </div>
 
