--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -99,7 +99,7 @@
 <div class="row background-white">
 
     <div class="tab">
-        <button class="tablinks" onclick="openTab(event, 'Ingredienten')" id="defaultOpen"> <span class="tab-green"> Ingrediënten </span> </button>
+        <button class="tablinks" onclick="openTab(event, 'Ingredienten')"> <span class="tab-green"> Ingrediënten </span> </button>
         <button class="tablinks" onclick="openTab(event, 'Bereidingswijze')"> <span class="tab-green"> Bereidingswijze </span> </button>
         <button class="tablinks" onclick="openTab(event, 'Opmerkingen')"> <span class="tab-green"> Opmerkingen </span> </button>
     </div>
