logos en footer in CSS

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -49,13 +49,13 @@
 
                     <img src="assets/img/verrukkulluk-agenda.png" class="logos center-horizontal mb-4"/> 
                     {% for calendar in 0..5 %}
-                        <p> <h3>  <i class="fa fa-calendar-day" style="color:white"></i>                                    
+                        <p> <h3>  <i class="fa fa-calendar-day white"></i>                                    
                         Vegatarisch koken </h3> 
                         Een workship vegatarisch koken onder leiding van Bobby </p>
                     {% endfor %}
 
-                </div> {# Einde agenda class #} 
-            </div>{# EIndigd de mb-5 #}
+                </div> {# Einde agenda md-12 class #} 
+            </div>{# EIndigd de mb-4-5-x2 #}
 
             {# ///////////////// Login ///////////////// #}
 
@@ -96,11 +96,11 @@
 
     {# 3de en laatste row met de footer --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- #}
     <div class="row" style="height: 400px">
-        <div class="col-md-2 pt-5 pl-5" style="background-color: #e85d04; color: #FFF">
-            <img src="assets/img/verrukkulluk-pay-off.png" style="height: 150px; width: 150px"/> <br>
+        <div class="col-md-2 background-darker-orange pt-5 pl-5">
+            <img src="assets/img/verrukkulluk-pay-off.png" class="logos-xxl"/> 
         </div>
-        <div class="col-md-10 pt-5" style="background-color: #e85d04; color: #FFF">
-            <img src="assets/img/verrukkulluk-contact.png" class="mb-5" style="height: 80px; width: 187px"/> 
+        <div class="col-md-10 background-darker-orange white pt-5">
+            <img src="assets/img/verrukkulluk-contact.png" class="mb-4 logos-xl"/> 
             <div> verrukkulluk.nl </div>
             <div> Poststraat 2b </div>
             <div> Sittard </div>
