--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,13 +109,27 @@ h3, h4, h5 {
     color: #dc3439;
 }
 
+.background-darker-orange {
+    background-color: #e85d04;
+}
+
 .custom-shadow {
     box-shadow: 3px 3px 20px 10px rgba(120, 117, 119, 0.2);
     /* alt box-shadow: 1px 1px 20px 5px rgba(120, 117, 119, 0.9); */
 }
 
 .logos {
-    height: 80px;
+    height: 85px;
+    width: auto;
+}
+
+.logos-xl {
+    height: 100px;
+    width: auto;
+}
+
+.logos-xxl {
+    height: 150px;
     width: auto;
 }
 
