--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -134,7 +134,7 @@
         {% for record in data.0.opmerkingen %}
         <div class="row pt-3 pl-5">
             <div class="col-md-4"
-                style="background-image: url('assets/img/users/{{record.afbeelding}}'); background-position: center; background-size: cover; height: 150px; max-width: 150px; border-radius: 50%"> 
+                style="background-image: url('assets/img/users/{{record.afbeelding}}'); background-position: center; background-size: cover; height: 150px; max-width: 150px; border-radius: 50%; border: 3px solid #fca01f;"> 
             </div>
             <div class="col-sm-8 pl-4"> 
                 <div class="row h2-5"> {{record.user_name}} </div>
