--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -22,7 +22,7 @@
 
 
 {% block content %}
-<div class="m-4-5">
+<div class="detail-width m-4-5">
 <div class="row custom-shadow background-white"> {# Begin bevenste gedeelte. Hier kan je min-height achter zetten, maar de omschrijving hieronder doet dat ook al#}  
 
 
@@ -94,7 +94,7 @@
 </div>  {# Sluit de m4-5 van hieroven voor de gerecht details#}
 <!-- tabladen: -->
 
-<div class="m-4-5">     {# opent een nieuwe m4-5 voor de tabs#}
+<div class="detail-width m-4-5">     {# opent een nieuwe m4-5 voor de tabs#}
 <!-- Tab buttons -->
 <div class="row background-white">
 
