--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -61,7 +61,7 @@
 
             <div class="col-md-12 background-red p-4 custom-shadow">
                 <img src="assets/img/verrukkulluk-login.png" class="logos center-horizontal mb-2"/>
-                <form id="form">
+                <form id="form" class="ml-4">
                     <div class="white"> Email: </div>
                     <div class="pb-3"> <input type="text" name="name" style="width: 350px"> </div>
 
